--- a/slider.css
+++ b/slider.css
@@ -48,6 +48,14 @@
     backdrop-filter: blur(2px);
 }
 
+.slide-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+}
+
 .slide-content {
     position: relative;
     z-index: 2;
